# Cacti-Scraper-Automation

./: .env.example  .gitignore  LICENSE  README.md  easyocr_image_to_text.py  graph_storage.py  main_pipeline.py  progress_tracker.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cleaning/: __init__.py  csv_generator.py
observability/: __init__.py
ocr/: ocr_processor.py
scraping/: scraper.py
storage/: __init__.py  database.py
templates/: index.html
tests/: conftest.py  test_cleaning.py  test_config.py  test_data_cleaner.py  test_database.py  test_pipeline.py
tracking/: progress.py
utils/: logging_config.py  summary_parser.py
web/: app.py
